# incident_platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: backend-ci.yaml  cicd_test_env.yml  front-ci.yaml  staging-promotion.yaml  worker-ci.yaml
app/: Dockerfile  main.py
app/api/: db.py  main.py  metrics.py
app/api/models/: schemas.py
app/api/routes/: health.py  incidents.py
app/api/tests/: conftest.py  test_health.py  test_incidents.py
app/worker/: Dockerfile  worker.py
app/worker/tests/: test_worker.py
frontend/: Dockerfile  README.md  app.js  index.html  package.json  styles.css
frontend/tests/: app.test.js
infra/cluster/: backend.tf
infra/modules/cluster/: cluster.tf  iam.tf  nodes.tf  oidc.tf  variables.tf
infra/modules/network/: internet.tf  outputs.tf  subnets.tf  variables.tf  vpc.tf
infra/network/: backend.tf  main.tf  provider.tf  variables.tf
infra/network/.terraform/: terraform.tfstate
k8s/: api-deployment.yml  front-deployment.yml  redis_secrets.yml  worker-deployment.yml
k8s/inci-plat/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml  values_bk.yml
k8s/inci-plat/argocd/: applicationset.yaml  prometheus-app.yml
k8s/inci-plat/templates/: _helpers.tpl  api-clusterip.yml  api-configmap.yml  api-deployment.yml  api-secret.yml  front-clusterip.yml  front-deployment.yml  incident-schema-configmap.yml  incident-schema-init-job.yml  ingress.yml  pg-clusterip.yml  (+9 more)
scripts/: create_incidents.sh
tests/: test_route.py
