[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "psycopg>=3.3.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.44.0",
]
